# deskforge

./: .gitignore  eslint.config.js  keycast.html  package.json  picker.html  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
docs/: 开发指南.md  快速参考.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: api_debugger_commands.rs  base64_tool_commands.rs  code_format_commands.rs  datetime_tool_commands.rs  dns_lookup_tool_commands.rs  generator_commands.rs  html_format_commands.rs  image_converter_commands.rs  json_format_commands.rs  keycast_commands.rs  markdown_preview_commands.rs  mod.rs  picker_color_commands.rs  public_ip_tool_commands.rs  qrcode_commands.rs  scheduler_commands.rs  system_info_commands.rs  whois_tool_commands.rs  window_commands.rs  xml_format_commands.rs
src-tauri/src/infra/: db.rs  mod.rs
src-tauri/src/models/: api_debugger.rs  base64_tool.rs  code_format.rs  color.rs  css_format.rs  datetime_tool.rs  dns_lookup_tool.rs  generator.rs  html_format.rs  image_converter.rs  json_format.rs  markdown_preview.rs  mod.rs  public_ip_tool.rs  qrcode.rs  rust_format.rs  scheduler.rs  system_info.rs  whois_tool.rs  xml_format.rs
src-tauri/src/repository/: mod.rs  scheduler_repository.rs
src-tauri/src/services/: api_debugger_service.rs  base64_tool_service.rs  code_format_service.rs  datetime_tool_service.rs  dns_lookup_tool_service.rs  generator_service.rs  html_format_service.rs  image_converter_service.rs  json_format_service.rs  keycast_service.rs  markdown_preview_service.rs  mod.rs  public_ip_tool_service.rs  qrcode_service.rs  scheduler_service.rs  system_info_service.rs  whois_tool_service.rs  window_service.rs  xml_format_service.rs
src-tauri/src/utils/: base64_tool.rs  code_formatter.rs  color_conversion.rs  css_formatter.rs  datetime_tool.rs  dns_lookup_tool.rs  html_formatter.rs  json_formatter.rs  mod.rs  public_ip_tool.rs  qrcode_renderer.rs  rust_formatter.rs  screen.rs  shortcut.rs  whois_tool.rs  xml_formatter.rs
(+84 files in other folders)
